--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,8 +6,11 @@
 @import 'basics/functions';
 @import 'basics/mixins';
 @import 'basics/helpers';
+@import 'basics/typography';
 //views
 @import 'views/stay-details';
+@import 'views/become-host';
+@import 'views/user-profile';
 
 
 // COMPONENTS
