--- a/src/styles/cmps/_header.scss
+++ b/src/styles/cmps/_header.scss
@@ -25,63 +25,94 @@
         .user-menu {
             display: flex;
             align-items: center;
-            border: 1px solid $clr6;
-            border-radius: 21px;
-            padding: 4px 4px 4px 10px;
-            gap: 13px;
-            position: relative;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
+            gap: 10px;
+            
+            .host-link-con {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 60px;
+                padding: 8px 0px 8px 0px;
+                height: 44px;
+                width: 130px;
+                
+                align-content: center;
 
-            span {
-                font-size: rem(16px);
-                // padding-inline-end:10px;
-                // padding-inline-start:6px;
-                // padding: 0px 10px 0px 10px;
+                &:hover {
+                    background-color: $clr7;
+                }
             }
 
-            .user-avater-con {
-                position: relative;
+            .user-pill-menu-con {
                 display: flex;
-                img {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                }
+                align-items: center;
+                justify-content: space-around;
+                border: 1px solid $clr6;
+                // border-radius: 21px;
+                border-radius: 60px;
+                // padding: 4px 4px 4px 10px;
+                padding: 8px 0px 8px 0px;
+                // gap: 13px;
+                position: relative;
+                box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
+                height: 44px;
+                width: 77px;
 
                 span {
-                    position: absolute;
-                    bottom: 6px;
-                    left: 19px;
-                    // color: rgba(137, 225, 5, 0.966);
-                    color: $clr1;
-                    font-size: rem(35px);
-                    z-index: 1;
-                    // border: 1px solid $clr2;
-                  
+                    font-size: rem(16px);
+                    // padding-inline-end:10px;
+                    // padding-inline-start:6px;
+                    // padding: 0px 10px 0px 10px;
+                }
+
+                .user-avater-con {
+                    position: relative;
+                    display: flex;
+
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                    }
+
+                    span {
+                        position: absolute;
+                        bottom: 6px;
+                        left: 19px;
+                        // color: rgba(137, 225, 5, 0.966);
+                        color: $clr1;
+                        font-size: rem(35px);
+                        z-index: 1;
+                        // border: 1px solid $clr2;
+
+                    }
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+                    transition: box-shadow 0.2s ease;
+
                 }
 
             }
 
-            &:hover {
-                cursor: pointer;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
-                transition: box-shadow 0.2s ease;
-
-            }
 
             .dropdown-content {
                 position: absolute;
                 z-index: 1;
                 display: flex;
                 flex-direction: column;
-                top: 50px;
-                right: 1px;
+                top: 75px;
+                right: 151px;
+                // left: 10px;
                 background-color: $clr2;
                 // gap: 10px;
                 border-radius: 10px;
                 width: 200px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
                 transition: box-shadow 0.2s ease;
+                overflow: hidden;
 
                 span {
                     padding: 10px 10px 10px 10px;
@@ -91,7 +122,7 @@
                         //   box-shadow: 0 2px 4px rgba(0,0,0,0.18);
                         //     transition: box-shadow 0.2s ease;
                         background-color: $clr7 ;
-                        border-radius: 10px;
+                        // border-radius: 10px;
                     }
                 }
             }
