--- a/src/styles/cmps/_trip-preview.scss
+++ b/src/styles/cmps/_trip-preview.scss
@@ -1,6 +1,11 @@
-.trip-preview {
-    display: flex;
-    gap: 10px;
+.trip-preview-main-warpper {
+    // display: flex;
+    // gap: 10px;
+    .main-content{
+        display: flex;
+        gap: 10px;
+    }
+    
     .img-container {
         width: 130px;
         height: 115px;
@@ -12,6 +17,66 @@
         flex-direction: column;
         gap: 5px;
         
+        >*:not(:first-child){
+            color: $clr5;
+        }
+        
 
+    }
+
+    .trip-banner-wrapper{
+        display: flex;
+        outline: 1px solid $clr5;
+        border-radius: 12px;
+        overflow: hidden;
+        width: 100%;
+        height: 40vh;
+        .banner-text-con{
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end; 
+            padding: 32px;   
+            gap: 10px;                    
+            .title{
+                font-size: rem(25px);
+                color: $clr3;
+                margin-bottom: 10px;
+            }
+            .sub{
+             font-size: rem(16px);
+             color: $clr4;
+             margin: 0;
+            //  margin-bottom: 10px;
+            } 
+
+            .link-explore{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 200px;
+                height: 50px;
+                background-color: $clr1;
+                border-radius: 10px;
+                color: $clr2;
+                margin-top: 16px;
+                font-size: rem(18px);
+                
+            }
+        }
+        .img-container{
+            // flex-grow: 1;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            background-clip: border-box;
+        // background-clip: padding-box;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
     }
 }
